syntax = "proto3";

package server;

option go_package = "internal/server/proto";

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";


service GophKeeper {
  // Service health
  rpc Ping(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Register new user
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
  // Login user
  rpc LoginUser(LoginUserRequest) returns (LoginUserResponse);
  // SaveVault saves new record to vault
  rpc SaveVault(SaveVaultRequest) returns (SaveVaultResponse);
  // Retrieves all vaults saved by user
  rpc GetVaults(google.protobuf.Empty) returns (GetUserVaultsResponse);
  // Login user
  rpc DeactivateVault(DeactivateVaultRequest) returns (DeactivateVaultResponse);
  // UploadFile is used to send binary data as stream of chunks
  rpc UploadFile (stream UploadFileRequest) returns (VaultItem);
  // Retrieve all vaults saved by user using streamed response
  rpc GetSteamedVaults(google.protobuf.Empty) returns (stream StreamVaultsResponse);
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse);
}

// Message represents request to register new user
message RegisterUserRequest {
    string login = 1;
    string password = 2;
}

// Message represents response to register new user
message RegisterUserResponse {
    uint64 id = 1;
    string login = 2;
    string token = 3;
    bool success = 4;
}

// Message represents request to login user
message LoginUserRequest {
    string login = 1;
    string password = 2;
}

// Message represents response to login user
message LoginUserResponse {
    string token = 1;
    bool success = 2;
}

// Message represents request to save data to vault
message SaveVaultRequest {
    string name = 1;
    string data_type = 2;
    bytes ecrypted_data = 3;
    google.protobuf.Struct meta_data = 4;
}

// Message represents response to to save data to vault
message SaveVaultResponse {
    bool success = 1;
}

message VaultItem {
    int32 id = 1;
    int32 user_id = 2;
    string name = 3;
    string data_type = 4;
    bytes encrypted_data = 5;
    google.protobuf.Struct meta_data = 6;
    string created_at = 7;
    string updated_at = 8;
    bool active = 9;
    int32 version = 10;
}

// Message represents response to retrieve all vaults saved by user
message GetUserVaultsResponse {
    repeated VaultItem vaults = 1;
}

// Message represents request to soft delete secret from vault
message DeactivateVaultRequest {
    int32 secret_id = 1;
}

// Message represents response to soft delete secret from vault
message DeactivateVaultResponse {
    bool success = 1;
}

// Message represents request to send streamed file data
message UploadFileRequest {
    string file_name = 1;
    oneof data {
        bytes chunk_data = 2;
        google.protobuf.Struct meta_data = 3;
  };
}

// Message represents streamed response to retrieve all vaults saved by user
message VaultItemChunk {
    VaultItem item = 1;
    bytes encrypted_data_chunk = 2;
    int32 chunk_index = 3;
    int32 total_chunks = 4;
    bool is_first_chunk = 5;
    bool is_last_chunk = 6;
}

message StreamMetadata {
    int32 total_items = 1;
    int32 current_item_index = 2;
    bool is_first_item = 3;
    bool is_last_item = 4;
}

message StreamVaultsResponse {
    oneof payload {
        VaultItemChunk item_chunk = 1;
        StreamMetadata metadata = 2;
    }
}

message ChangePasswordRequest {
    string current_password = 1;
    string new_password = 2;
}

message ChangePasswordResponse {
    bool success = 1;
}